--- a/homePage.css
+++ b/homePage.css
@@ -17,19 +17,15 @@
     background-color: #1c1c1c;
 }
 
+.button-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 20px;
+}
+
 
 body {
     background-color: #171717;
-}
-
-h1 {
-    color: rgb(255, 255, 255);
-    text-align: center;
-    font-family: 'Vanguard';
-    font-size: 120px;
-    letter-spacing: 2px;
-    margin-top: 0px;
-    align-items: start;
 }
 
 nav {
@@ -44,6 +40,7 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    gap: 20px;
 }
 
 li {
@@ -54,7 +51,7 @@ p1 {
     color: white;
     padding: 40px;
     font-family: 'Vanguard';
-    font-size: 200%;
+    font-size: 400%;
 }
 
 @font-face {
@@ -65,7 +62,6 @@ p1 {
 
 .mainIcon{
     transform: scale(0.7);
-    filter: invert(99%) sepia(0%) saturate(7496%) hue-rotate(357deg) brightness(111%) contrast(100%);
 }
 
 .container {
@@ -92,7 +88,7 @@ h1 {
     color: rgb(255, 255, 255);
     text-align: center;
     font-family: 'Vanguard';
-    font-size: 100px;
+    font-size: 950%;
     margin: 0; /* Rimuove il margine per evitare spazi extra */
     padding: 0 20px; /* Aggiungi un po' di spazio ai lati del testo */
 }
