user login/register management working with the database (currently in local)

--- a/html/homePage.css
+++ b/html/homePage.css
@@ -263,3 +263,18 @@ input[type="text"]:focus, input[type="email"]:focus, textarea:focus, input[type=
 .fastScan iframe {
     margin-left: 25% ; 
   }
+
+.account p {
+    color: white;
+    font-size: 30px;
+}
+
+.account a {
+    color: white;
+    font-size: 20px;
+}
+
+.account a:hover {
+    color: #FDBE00;
+}
+
