--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
   }
   
   .flex-item {
-    padding: 5px;
+    padding: 4px;
     margin-top: 10px;
     line-height: 150px;
     color: white;
@@ -38,8 +38,8 @@
 
   }
 
-  .flex2-item {
-
+  .flex2-itemGrow {
+    
   }
 
   @font-face {
@@ -59,5 +59,17 @@ body {
         color: red;
     }
 
-    
   }
+
+h1 {
+  font-size: 8vw;
+  font-family: Vanguard;
+  text-align: center;
+}
+
+a {
+  text-decoration: none; /* Per i link, in modo da non mettere la sottolineatura sotto*/
+  color: white;
+  font-family: Vanguard;
+  font-size: 4vw;
+}
