--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ a {
   text-decoration: none; /* Per i link, in modo da non mettere la sottolineatura sotto*/
   color: white;
   font-family: Vanguard;
-  font-size: 5vw;
+  font-size: clamp(16px, 5vw, 80px); /* clamp(minsize, normalsize, maxsize) */
 }
 
 a:hover {
@@ -138,7 +138,7 @@ footer {
 }
 
 .mainIcon {
-  width: 20vw;  /* Use 'width' for resizing */
+  width: clamp(16px, 20vw, 400px);  /* Use 'width' for resizing */
   height: auto; /* Maintain aspect ratio */
 }
 
@@ -170,6 +170,15 @@ footer {
 
 .qr-container {
   display: none;
+}
+
+.p3 {
+  text-align: center;
+  font-size: clamp(20px, 0.67vw, 20px);
+  color: rgb(232, 230, 227);
+  font-family: 'Vanguard';
+  margin: 0;
+  padding: 0 0px;
 }
 
 /* Medium screens */
@@ -266,24 +275,34 @@ footer {
   /* ============================ LOGIN PAGE ========================= */
   /* ================================================================= */
   .form-container {
-    width: 80vw;
-    height: 60vw;
-    min-width: 400px;
-    min-height: 300px;
+    width: 80vw; /* Maintain the width */
+    height: auto; /* Allow height to adjust based on content */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    background-color: #171717;
+    padding: 2%; /* Use percentage for padding */
+    border-radius: 10px;
+    border: 3px solid #ffffff;
+    margin: auto;
+    box-sizing: border-box; /* Include padding and border in the element's total width and height */
   }
-
+  
   .form1 {
     margin: 10px 0;
-    padding: 10px;
-    width: 60vw;
-    min-width: 300px;
-    height: 7vw;
+    padding: 2%; /* Use percentage for padding */
+    width: 90%; /* Use percentage for width */
+    max-width: 300px; /* Optional max width */
+    height: auto; /* Allow height to adjust based on content */
     border: none;
     border-radius: 5px;
     background-color: #171717;
     border: 2px solid white;
     color: #ffffff;
-    font-size: 2vw;
+    font-size: 2vw; /* Responsive font size */
+    box-sizing: border-box; /* Include padding and border in the element's total width and height */
   }
 
   .qr-container {
@@ -336,5 +355,11 @@ input[type="submit"]:hover {
 
 .form1:hover {
   background-color: #353434;
+}
+
+.fastScan{
+  font-size: clamp(10px, 1vw, 40px);
+  color: white;
+  padding: 4%;
 }
 
